# nou

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  README.md  meson.build
.github/workflows/: ci.yml  lint.yml  review.yml
include/nou/: nou.hpp
include/nou/detail/layer/: builder.hpp  is_connectable.hpp  layer.hpp
include/nou/detail/network/: make_network.hpp  network.hpp
include/nou/detail/utility/: extents.hpp
test/: meson.build
test/ut/: is_connectable.cc  make_network.cc  meson.build  network.cc
